# Rein

./: CMakeLists.txt  README.md  compose.yaml
include/: action_encoder.hpp  agent.hpp  agent_actions.hpp  autoencoder.hpp  brain.hpp  decoder.hpp  encoder.hpp  image_holder.hpp  keyboard.hpp  keymap.hpp  layers.hpp  mnist.hpp  monitor.hpp  optimizer.hpp  sampling.hpp  teacher.hpp  util.hpp  vae.hpp  vae_decoder.hpp  vae_encoder.hpp
include/nn/: backconv.hpp  conv.hpp  dropout.hpp  layer_base.hpp  layers.hpp  normalizer.hpp  rectifier.hpp  simerror.hpp
mnist/: ins_mnist.sh
src/: action_encoder.cpp  agent.cpp  autoencoder.cpp  decoder.cpp  encoder.cpp  image_holder.cpp  keymap.cpp  main.cpp  mnist.cpp  monitor.cpp  sampling.cpp  teacher.cpp  util.cpp  vae.cpp  vae_decoder.cpp  vae_encoder.cpp
src/nn/: affine.cpp  backconv.cpp  conv.cpp  dropout.cpp  flatten.cpp  layer_base.cpp  normalizer.cpp  optimizer.cpp  rectifier.cpp  relu.cpp  sigmoid.cpp  simerror.cpp  sme.cpp  softmaxwithloss.cpp
